samples/_failures_safe/1761411513_f5d798_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c44d9f8.c: In function ‘main’:
./samples/SAFE/__tmp_4c44d9f8.c:151:13: error: expected declaration or statement at end of input
  151 |             return 1;
      |             ^~~~~~
./samples/SAFE/__tmp_4c44d9f8.c:151:13: error: expected declaration or statement at end of input
